--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,11 @@ django-filter==2.4.0
 django-templated-mail==1.1.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.3.0
+drf-yasg==1.20.0
 gunicorn==20.0.4
 idna==3.3
 importlib-metadata==1.7.0
+inflection==0.5.1
 iniconfig==1.1.1
 itypes==1.2.0
 Jinja2==3.0.2
@@ -34,9 +36,12 @@ PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==6.2.5
 pytest-django==4.4.0
+python-dotenv==0.19.2
 pytz==2020.1
 reportlab==3.6.2
 requests==2.26.0
+ruamel.yaml==0.17.20
+ruamel.yaml.clib==0.2.6
 six==1.16.0
 sqlparse==0.3.1
 toml==0.10.2
